[package]
name = "ata-messenger"
version = "0.1.0"
edition = "2024"

[dependencies]
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
hkdf = "0.13.0"
sha2 = "0.11.0"
aes-gcm = "0.10.3"
rand = "0.8.5"
tokio = { version = "1.51.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zeroize = { version = "1.8.2", features = ["derive"] }
argon2 = "0.5.3"
password-hash = "0.5.0"